You want a piece of me? Checky gone sparky!

--- a/www/html/html5.html
+++ b/www/html/html5.html
@@ -21,10 +21,10 @@
           Installieren des <a href="http://code.google.com/chrome/chromeframe/">google-chrome Frames</a>. So ist kein Umgewöhnen von Nöten.
         </li>
         <li>
-          Installieren des <a href="http://www.opera.com/browser/">Opera-Browsers</a>
+          Der <a href="http://www.opera.com/browser/">Opera-Browsers</a> unterstützt momentan noch keine <a href="http://my.opera.com/dstorey/blog/show.dml/695964">multi-columns</a>. gnovi funktioniert trotzdem damit.
         </li>
         <li>
-          Installieren des <a href="http://windows.microsoft.com/ie9">Internet Explorers 9<a/>
+          Installieren des <a href="http://windows.microsoft.com/ie9">Internet Explorers 9</a>
         </li>
         <li>
           Installieren des <a href="http://www.mozilla.com/en-US/firefox/">Mozilla Firefox</a>
