--- a/www/html/html5.html
+++ b/www/html/html5.html
@@ -21,12 +21,6 @@
           Installieren des <a href="http://code.google.com/chrome/chromeframe/">google-chrome Frames</a>. So ist kein Umgewöhnen von Nöten.
         </li>
         <li>
-          Der <a href="http://www.opera.com/browser/">Opera-Browsers</a> unterstützt momentan noch keine <a href="http://my.opera.com/dstorey/blog/show.dml/695964">multi-columns</a>. gnovi funktioniert trotzdem damit.
-        </li>
-        <li>
-          Installieren des <a href="http://windows.microsoft.com/ie9">Internet Explorers 9</a>
-        </li>
-        <li>
           Installieren des <a href="http://www.mozilla.com/en-US/firefox/">Mozilla Firefox</a>
         </li>
         <li>
@@ -34,6 +28,14 @@
         </li>
         <li>
           <a href="https://github.com/Modernizr/Modernizr/wiki/HTML5-Cross-browser-Polyfills">Weitere Lösungsmöglichkeiten im Detail</a>
+        </li>
+        <li>
+          Installieren des <a href="http://windows.microsoft.com/ie9">Internet Explorers 9</a>
+        </li>
+        <li>
+          <a href="http://www.opera.com/browser/">Opera</a> unterstützt momentan noch keine 
+            <a href="http://my.opera.com/dstorey/blog/show.dml/695964">multi-columns</a>. gnovi funktioniert trotzdem damit, auch wenn 
+              der Lesefluss leidet.
         </li>
       </ul>
     </p>
